Bug 1751510 - Zoom gesture can not be performed at the same time as a pan gesture. r=botond

And add mochitest for pinching and panning in the same gesture.

Differential Revision: https://phabricator.services.mozilla.com/D151689